[package]
name = "crowdfunding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
test-bpf = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
solana-program = "1.10.29"
heapless = "0.7.16"

[dev-dependencies]
solana-program-test = "1.10.29"
solana-sdk = "1.10.29"
spl-associated-token-account = "1.0.5"
